k8s_manifests/ingress/product/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd-dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: alb-product
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:332543631386:certificate/a3c41c60-0453-4c84-bb19-b073b55a22bb
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    external-dns.alpha.kubernetes.io/hostname: workplug.team
spec:
  rules:
  - host: argocd-dashboard.workplug.team
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ssl-redirect
              port: 
                name: use-annotation
  - host: argocd-dashboard.workplug.team
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argo-cd-argocd-server
              port: 
                number: 443
