k8s_manifests/ingress/product/workplug-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: eks-work
  name: workplug-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: alb-product
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:332543631386:certificate/a3c41c60-0453-4c84-bb19-b073b55a22bb
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    external-dns.alpha.kubernetes.io/hostname: workplug.team
spec:
  rules:
  - host: view.workplug.team
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front-office-app-service
              port: 
                number: 3000
  - host: app.workplug.team
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: back-office-app-service
              port: 
                number: 3001
  - host: api.workplug.team
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backend-app-service
              port: 
                number: 8080
  - host: auth.workplug.team
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: auth-app-service
              port:
                number: 8000
  - host: ai.workplug.team
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "ai-app-service"
              port:
                number: 5000
